# d2rloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  D2RLoader.spec  LICENSE  Makefile  PLUGINS.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  release-build.yml
d2rloader/: app.py  constants.py
d2rloader/core/: __init__.py  core.py  game_settings.py  process.py  process_utils.py  regedit.py  state.py  storage.py  version.py  worker.py
d2rloader/core/platform_linux/: lutris.py  process.py  umu.py  utils.py
d2rloader/core/platform_windows/: process.py  regedit.py  utils.py
d2rloader/core/plugins/: hookspec.py  imptools.py  loader.py  markers.py  spec.py
d2rloader/core/process_linux/: __init__.py  manager.py
d2rloader/core/process_windows/: manager.py
d2rloader/core/store/: accounts.py  base.py  settings.py
d2rloader/models/: __init__.py  account.py  setting.py
d2rloader/ui/: __init__.py  account_dialog.py  dialog_account.py  dialog_setting.py  info_tab.py  main.py  setting_dialog.py  table.py  theme.py  update_checker.py  utils.py  widget_info.py  widget_main.py  widget_main_table.py
d2rloader/ui/utils/: utils.py
resources/: D2RLoader.spec  PKGBUILD  d2rloader.appdata.xml  d2rloader.desktop  generate_appdata_releases.py
resources/appimage/: d2rloader.appdata.xml  d2rloader.desktop  entrypoint.sh  requirements.txt
