[project]
name = "d2rloader"
version = "0.1.0"
dependencies = [
  "loguru>=0.7.3",
  "psutil>=6.1.1",
  "pydantic>=2.10.6",
  "PySide6>=6.8.2.1",
  "pywin32>=308; platform_system == 'Windows'",
  "unidecode>=1.3.8",
]
requires-python = ">=3.12"
authors = [
  {name = "sh4nks", email = ""},
]
maintainers = [
  {name = "sh4nks", email = ""}
]
description = "Diablo 2 Resurrected Multi Loader"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["d2r", "qt", "diablo", "loader"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[dependency-groups]
dev = [
  "ruff>=0.9.7",
  "ipython>=8.32.0",
  "pyinstaller>=6.12.0"
]

[project.urls]
Homepage = "https://github.com/sh4nks/d2r-loader"
Documentation = "https://github.com/sh4nks/d2r-loader"
Repository = "https://github.com/sh4nks/d2r-loader"
"Bug Tracker" = "https://github.com/sh4nks/d2r-loader/issues"
Changelog = "https://github.com/sh4nks/d2r-loader/blob/master/CHANGELOG.md"

[project.scripts]
d2rloader = "d2rloader.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ['pydantic.mypy', 'keyof.mypy_plugin']

[tool.basedpyright]
include = ["d2rloader"]
exclude = ["**/node_modules", "**/__pycache__"]
defineConstant = { DEBUG = true }
reportIgnoreCommentWithoutRule = false
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
