[project]
name = "d2rloader"
version = "1.3.0"
dependencies = [
  "imptools>=1.3.0",
  "loguru>=0.7.3",
  "pluggy>=1.5.0",
  "psutil>=7.0.0",
  "pydantic>=2.10.6",
  "PySide6==6.8.3",
  "pywin32==310; platform_system == 'Windows'",
  "unidecode>=1.3.8",
]
requires-python = ">=3.12"
authors = [
  {name = "sh4nks", email = ""},
]
maintainers = [
  {name = "sh4nks", email = ""}
]
description = "Diablo 2 Resurrected Multi Loader"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["d2r", "qt", "diablo", "loader"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft",
  "Operating System :: POSIX :: Linux",
  "Topic :: Games/Entertainment"
]

[dependency-groups]
dev = [
  "ruff>=0.9.10",
  "pre-commit>=4.2.0"
]
windows = [
  "pyinstaller>=6.12.0"
]
build = ["hatch"]

[project.urls]
Homepage = "https://github.com/sh4nks/d2rloader"
Documentation = "https://github.com/sh4nks/d2rloader"
Repository = "https://github.com/sh4nks/d2rloader"
"Bug Tracker" = "https://github.com/sh4nks/d2rloader/issues"
Changelog = "https://github.com/sh4nks/d2rloader/blob/master/CHANGELOG.md"

[project.scripts]
d2rloader = "d2rloader.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ['pydantic.mypy', 'keyof.mypy_plugin']

[tool.basedpyright]
include = ["d2rloader"]
exclude = ["**/node_modules", "**/__pycache__"]
defineConstant = { DEBUG = true }
reportIgnoreCommentWithoutRule = false
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
